<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.miun.osgu1400.bathingsites.NewBathingSiteActivity">

    <item
        android:id="@+id/clear"
        android:orderInCategory="1"
        android:title="@string/clear"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:orderInCategory="2"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/weather"
        android:orderInCategory="3"
        android:title="@string/weather"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="4"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
